# taller-ii-boilerplate--GRUPO1

./: README.md  comentarios.txt  infojuli.py  productos_filtrados.csv  pyproject.toml
.gradio/flagged/: dataset1.csv
cambios_chicho/: entrenar_balanceado_%30.py  prueba.py
entregas semanales/: INFERENCIA-GRADIO-morado.py  INFERENCIA.py  SEMANA-1.py  SEMANA-2.py  SEMANA-3.py  SEMANA-4.py  SEMANA-5.py  SEMANA-6.py  SEMANA-7.py  SEMANA-8.py  SEMANA2.py  balanceodataset.py  comentarios.csv  comentarios.txt  matrizdeconfusionmlp.py  nubes-de-palabras.py  vectorizador_tfidf.pkl
notebooks/: Clase 2 - Introducción al NLP.ipynb  Clase 6 - EDA.ipynb
src/: limpiarMatriz.py  pruebaLeo_Modelos.py  pruebaRayo.py
src/taller_ii_boilerplate/: app.py  ejemplo-profe.py
src/taller_ii_boilerplate/extraction/: api_request.py  scrapping.py  scrapping_ejemplo_bbc.py
src/taller_ii_boilerplate/inference/: inference.py  inferencia.py
src/taller_ii_boilerplate/models/: embeddings.py  entrenamiento.py  optimizacion.py  vectorizacion.py
src/taller_ii_boilerplate/preprocessing/: procesamiento.py
src/test/: modelo_lr.pkl  pruebaLeo_CsvBalanceado.py  pruebaLeo_Modelos.py  pruebaLeo_inferencia.py  soupRayo.py  vectorizador_tfidf.pkl
src/test/Old/: comentarios22.csv
src/test/juli/: INFERENCIA.py  semana7.py
