[project]
name = "taller-ii-boilerplate"
version = "0.1.0"
description = ""
authors = [
    {name = "Ana Martínez Saucedo",email = "anmartinez@uade.edu.ar"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "taller_ii_boilerplate", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
