[project]
name = "taller-ii-boilerplate"
version = "0.1.0"
description = ""
authors = [
    {name = "Ana Martínez Saucedo",email = "anmartinez@uade.edu.ar"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "notebook (>=7.4.5,<8.0.0)",
    "contractions (>=0.1.73,<0.2.0)",
    "emoji (>=2.14.1,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "taller_ii_boilerplate", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
